--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div id="imageContainer"></div>
      
     </div>
-    <button id="buy">$$$</button>
+    <button id="buy">$$$ BUY $$$</button>
 
     <!-- or to have image linked: -->
     <!--<a href="."><script type="text/javascript">getRandomImage(random_images_array)</script></a>-->
